# fastapi-graphql-react

./: README.md
backend/: README.md  main.py  pyproject.toml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/.storybook/: main.ts  preview.ts
frontend/.storybook/decorators/: withCustomTheme.tsx
frontend/src/: App.tsx  CustomTheme.tsx  index.css  main.tsx
frontend/src/stories/: App.stories.ts
